# dev-loop

./: .devloop.yaml  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yaml  justfile  package.json  pyproject.toml
.beads/: config.yaml  issues.jsonl
config/: agents.yaml  capabilities.yaml  dependencies.yaml  llmops.yaml  review-gate.yaml  scheduling.yaml
daemon/: Cargo.toml
daemon/benches/: check_engine.rs
daemon/src/: checkpoint.rs  cli.rs  config.rs  continuity.rs  daemon.rs  dashboard.rs  event_log.rs  feedback.rs  hook.rs  install.rs  lib.rs  main.rs  otel.rs  override_mgr.rs  rules_md.rs  server.rs  session.rs  shadow_report.rs  sse.rs  traces.rs  transcript.rs
daemon/src/check/: dangerous_ops.rs  deny_list.rs  mod.rs  secrets.rs
daemon/tests/: turmoil_concurrent.rs
docs/: ambient-layer-plan.md  architecture.md  calibration-implementation-plan.yaml  edge-cases-pass2.md  edge-cases.md  handoff-2026-03-15-phase5-session-otel.md  handoff-2026-03-16-calibration-implementation.md  handoff-2026-03-16-calibration-planning.md  handoff-2026-03-16-completion-pass.md  handoff-2026-03-16-phase0-silent-failures.md  handoff-2026-03-16-phase1-shadow-mode.md  handoff-2026-03-16-phase2-replay-harness.md  handoff-2026-03-16-phase3-planted-defect-suite.md  handoff-2026-03-16-phase4-feedback-loop.md  handoff-2026-03-16-phase5-calibration-pipeline.md  handoff-2026-03-18-audit-fix-6-waves.md  handoff-2026-03-19-openobserve-dashboard-fixes.md  handoff-2026-03-30-v5-observability-validation.md  handoff.md  network-requirements.md  scoring-rubric.md  tb-hardening-plan.md  tb4-plan.md  test-repos.md  testing-calibration-plan.yaml  tracer-bullets.md  validation-report-2026-03-30-v2.md  validation-report-2026-03-30-v3.md  validation-report-2026-03-30-v4.md  validation-report-2026-03-30-v5.md  validation-report-2026-03-30-v6.md  validation-report-2026-03-30-v7.md  validation-report-2026-03-30.md  verification-report-2026-03-18.md
scripts/: calibrate.sh  import-alerts.py  import-dashboards.py  render-diagrams.mjs  stress-test.py
site/: index.html
tests/: test_ambiguity.py  test_beads_poller.py  test_config_validation.py  test_deny_list.py  test_differential_gate.py  test_feedback_channels.py  test_file_map.py  test_gates.py  test_heartbeat.py  test_import_dashboards.py  test_llmops.py  test_new_gates.py  test_orchestration.py  test_paths.py  test_runtime.py  test_scheduler.py  test_tb1.py  test_tb2_helpers.py  test_tb4.py  (+3 more)
tools/dashboard-mirror/: .gitignore  CLAUDE.md  README.md  RULES.md  SOUL.md  agent.yaml  pyproject.toml
tools/dashboard-mirror/docs/: fix-plan-2026-03-19.md  fix-plan-2026-03-20-post-mirror.md  fix-plan-2026-03-21-post-mirror-v2.md  handoff-2026-03-19-initial-pipeline-run.md  handoff-2026-03-20-mirror-validation.md  handoff-2026-03-20-post-mirror-fixes.md  handoff-2026-03-21-live-validation.md  handoff-2026-03-21-mirror-run-3.md  handoff-2026-03-21-mirror-validation-v2.md
tools/dashboard-mirror/prompts/: analyst-data.md  analyst-structure.md  analyst-ux.md  baseline.md  synthesizer.md
tools/dashboard-mirror/skills/analyze/: SKILL.md
tools/dashboard-mirror/skills/collect/: SKILL.md
tools/dashboard-mirror/skills/ground/: SKILL.md
tools/dashboard-mirror/src/dashboard_mirror/: __init__.py  collect.py  config.py  cross_map.py  schema.py  transform_chain.py
(+165 files in other folders)
